force-app/main/default/objects/SPEN_PaymentGestures__c/SPEN_PaymentGestures__c.object-meta.xml
<CustomObject>
    <description>Provide Payment related information.</description>
    <label>Payment/Gestures</label>
    <nameField>
        <displayFormat>PG-{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment/Gestures</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>