force-app/main/default/objects/SPEN_PaymentGestures__c/fields/SPEN_AmountDue__c.field-meta.xml
<CustomField>
    <fullName>SPEN_AmountDue__c</fullName>
    <description>It holds Amount due for CRMD-1358</description>
    <label>Payment/Gestures Value Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>