force-app/main/default/objects/SPEN_PaymentGestures__c/fields/SPEN_BusinessArea__c.field-meta.xml
<CustomField>
    <fullName>SPEN_BusinessArea__c</fullName>
    <description>It holds the business area for CRMD-1358</description>
    <label>Business Area</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1480</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>