force-app/main/default/objects/SPEN_PaymentGestures__c/fields/SPEN_BusinessResponsibleforpayment__c.field-meta.xml
<CustomField>
    <fullName>SPEN_BusinessResponsibleforpayment__c</fullName>
    <label>Business Responsible for payment</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>License</fullName>
            </value>
            <value>
                <fullName>CS</fullName>
            </value>
            <value>
                <fullName>Service Partner</fullName>
            </value>
            <value>
                <fullName>L&amp;P</fullName>
            </value>
            <value>
                <fullName>District</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>