force-app/main/default/objects/SPEN_PaymentGestures__c/fields/SPEN_Case__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Case__c</fullName>
    <description>For Case Look-up CRMD-5327</description>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Payment/Gestures</relationshipLabel>
    <relationshipName>SPEN_PaymentGestures</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>