force-app/main/default/objects/SPEN_PaymentGestures__c/fields/SPEN_CommentsNotes__c.field-meta.xml
<CustomField>
    <fullName>SPEN_CommentsNotes__c</fullName>
    <description>It holds comments/ Notes from customer. CRMD-5327, CRMD-6554</description>
    <label>Comments</label>
    <type>TextArea</type>
</CustomField>