force-app/main/default/objects/SPEN_PaymentGestures__c/fields/SPEN_CompanyCode__c.field-meta.xml
<CustomField>
    <fullName>SPEN_CompanyCode__c</fullName>
    <label>Company Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>8300</fullName>
            </value>
            <value>
                <fullName>8303</fullName>
            </value>
            <value>
                <fullName>8301</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>