force-app/main/default/objects/SPEN_PaymentGestures__c/fields/SPEN_CSTotal__c.field-meta.xml
<CustomField>
    <fullName>SPEN_CSTotal__c</fullName>
    <label>CS Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>