force-app/main/default/objects/SPEN_PaymentGestures__c/fields/SPEN_DestExpectedDate__c.field-meta.xml
<CustomField>
    <fullName>SPEN_DestExpectedDate__c</fullName>
    <defaultValue>(Today() + 7)</defaultValue>
    <description>It holds the expected date for CRMD-1358</description>
    <label>Dest.Expected.Date</label>
    <type>Date</type>
</CustomField>