force-app/main/default/objects/SPEN_PaymentGestures__c/fields/SPEN_Gesture__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Gesture__c</fullName>
    <description>Holds the type of Gesture. CRMD-1358</description>
    <label>Gesture</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Voucher</fullName>
            </value>
            <value>
                <fullName>Flowers</fullName>
            </value>
            <value>
                <fullName>Cards</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>