force-app/main/default/objects/SPEN_PaymentGestures__c/fields/SPEN_GLCountAc__c.field-meta.xml
<CustomField>
    <fullName>SPEN_GLCountAc__c</fullName>
    <description>It holds the GLCount Account for CRMD-1358</description>
    <label>GL Count.Ac</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>678000160</fullName>
            </value>
            <value>
                <fullName>652000100</fullName>
            </value>
            <value>
                <fullName>625000180</fullName>
            </value>
            <value>
                <fullName>623000180</fullName>
                <isActive>false</isActive>
                <label>623000180</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>