force-app/main/default/objects/SPEN_PaymentGestures__c/fields/SPEN_GSPaymentType__c.field-meta.xml
<CustomField>
    <fullName>SPEN_GSPaymentType__c</fullName>
    <description>It includes the payment type of GS</description>
    <label>Payment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GS Failure Payment</fullName>
            </value>
            <value>
                <fullName>GS Customer Service / Top Up / Ex-Gratia Payment</fullName>
            </value>
            <value>
                <fullName>GS Exemption Payment</fullName>
            </value>
            <value>
                <fullName>GS Exemption no Payment</fullName>
            </value>
            <value>
                <fullName>GS no response from customer</fullName>
            </value>
            <value>
                <fullName>Hotel Payment</fullName>
            </value>
            <value>
                <fullName>Hot Food</fullName>
            </value>
            <value>
                <fullName>Just Eat Payment</fullName>
            </value>
            <value>
                <fullName>Simply Thank You</fullName>
            </value>
            <value>
                <fullName>GS11 ( only) Goodwill Payment</fullName>
            </value>
            <value>
                <fullName>GS - IDNO/DNO Payment</fullName>
            </value>
            <value>
                <fullName>Customer Service Payment</fullName>
            </value>
            <value>
                <fullName>Service Partners Invoice Cost</fullName>
            </value>
            <value>
                <fullName>Customers Refund For Own Appliances Payment</fullName>
            </value>
            <value>
                <fullName>Decorating, Carpets, Cleaning, Plumber, Joining Payments</fullName>
            </value>
            <value>
                <fullName>Insurance Payment</fullName>
            </value>
            <value>
                <fullName>Insurance Land Damage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>