force-app/main/default/objects/SPEN_PaymentGestures__c/fields/SPEN_GSTotal__c.field-meta.xml
<CustomField>
    <fullName>SPEN_GSTotal__c</fullName>
    <label>GS Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>