force-app/main/default/objects/SPEN_PaymentGestures__c/fields/SPEN_ManagementDepart__c.field-meta.xml
<CustomField>
    <fullName>SPEN_ManagementDepart__c</fullName>
    <description>It includes management department for CRMD-1358</description>
    <label>Management Depart.</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>01</fullName>
            </value>
            <value>
                <fullName>02</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>