force-app/main/default/objects/SPEN_PaymentGestures__c/fields/SPEN_MassUpload__c.field-meta.xml
<CustomField>
    <fullName>SPEN_MassUpload__c</fullName>
    <defaultValue>false</defaultValue>
    <description>It includes mass upload for CRMD-1358</description>
    <label>Mass Upload</label>
    <type>Checkbox</type>
</CustomField>