force-app/main/default/objects/SPEN_PaymentGestures__c/fields/SPEN_MonthPayment__c.field-meta.xml
<CustomField>
    <fullName>SPEN_MonthPayment__c</fullName>
    <description>CRMD-6554</description>
    <formula>CASE(MONTH( SPEN_PaymentGesturesdate__c ),
1, &quot;January&quot;,
2, &quot;February&quot;,
3, &quot;March&quot;, 
4, &quot;April&quot;, 
5, &quot;May&quot;, 
6, &quot;June&quot;,
7, &quot;July&quot;,
8, &quot;August&quot;,
9, &quot;September&quot;,
10, &quot;October&quot;,
11, &quot;November&quot;,
12, &quot;December&quot;,
&quot;None&quot;)</formula>
    <label>Month Of Payment</label>
    <type>Text</type>
</CustomField>