force-app/main/default/objects/SPEN_PaymentGestures__c/fields/SPEN_OrderCO__c.field-meta.xml
<CustomField>
    <fullName>SPEN_OrderCO__c</fullName>
    <description>It cludes Orders for CRMD-1358</description>
    <label>Order CO</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>5701761209</fullName>
            </value>
            <value>
                <fullName>5701761225</fullName>
            </value>
            <value>
                <fullName>5701668720</fullName>
            </value>
            <value>
                <fullName>5701761208</fullName>
            </value>
            <value>
                <fullName>5701668721</fullName>
            </value>
            <value>
                <fullName>5701668692</fullName>
            </value>
            <value>
                <fullName>5701668718</fullName>
            </value>
            <value>
                <fullName>5701668687</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>