force-app/main/default/objects/SPEN_PaymentGestures__c/fields/SPEN_PayComment__c.field-meta.xml
<CustomField>
    <fullName>SPEN_PayComment__c</fullName>
    <description>This is to add Payment comment on CRMD-1358</description>
    <label>Pay Comment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>