force-app/main/default/objects/SPEN_PaymentGestures__c/fields/SPEN_PaymentAmountPaid__c.field-meta.xml
<CustomField>
    <fullName>SPEN_PaymentAmountPaid__c</fullName>
    <description>It holds the payment amountCRMD-1358</description>
    <label>Payment/Gestures Value Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>