force-app/main/default/objects/SPEN_PaymentGestures__c/fields/SPEN_PaymentDate__c.field-meta.xml
<CustomField>
    <fullName>SPEN_PaymentDate__c</fullName>
    <description>It populates the date of payment CRMD-1358</description>
    <label>Payment Date</label>
    <type>Date</type>
</CustomField>