force-app/main/default/objects/SPEN_PaymentGestures__c/fields/SPEN_PaymentGesturesdate__c.field-meta.xml
<CustomField>
    <fullName>SPEN_PaymentGesturesdate__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <description>Autopopulate current date on it. CRMD-5327</description>
    <label>Payment/Gestures date</label>
    <type>Date</type>
</CustomField>