force-app/main/default/objects/SPEN_PaymentGestures__c/fields/SPEN_PaymentGesturesreason__c.field-meta.xml
<CustomField>
    <fullName>SPEN_PaymentGesturesreason__c</fullName>
    <description>It holds Payment/ Gestures reason CRMD-5327</description>
    <label>Payment/Gestures reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Service Disruption Compensation</fullName>
            </value>
            <value>
                <fullName>Other Compensation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>