force-app/main/default/objects/SPEN_PaymentGestures__c/fields/SPEN_PaymentGesturesrefSAPref__c.field-meta.xml
<CustomField>
    <fullName>SPEN_PaymentGesturesrefSAPref__c</fullName>
    <description>It holds Payment/Gestures reference(SAP) CRMD-5327</description>
    <label>Payment/Gestures ref. (SAP ref.)</label>
    <length>30</length>
    <type>Text</type>
</CustomField>