force-app/main/default/objects/SPEN_PaymentGestures__c/fields/SPEN_PaymentGesturesrefSimplyThankyou__c.field-meta.xml
<CustomField>
    <fullName>SPEN_PaymentGesturesrefSimplyThankyou__c</fullName>
    <description>It holds Thank You Note. CRMD-5327</description>
    <label>Payment/Gestures ref.(Simply Thankyou)</label>
    <length>30</length>
    <type>Text</type>
</CustomField>