force-app/main/default/objects/SPEN_PaymentGestures__c/fields/SPEN_PaymentGesturesvalue__c.field-meta.xml
<CustomField>
    <fullName>SPEN_PaymentGesturesvalue__c</fullName>
    <description>It holds the payment amount. CRMD-5327</description>
    <label>Payment/Gestures value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>