force-app/main/default/objects/SPEN_PaymentGestures__c/fields/SPEN_PaymentReferenceSAPreference__c.field-meta.xml
<CustomField>
    <fullName>SPEN_PaymentReferenceSAPreference__c</fullName>
    <description>It includes SAP reference for CRMD-1358, CRMD-6544</description>
    <label>Payment Reference(SAP/STY)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>