force-app/main/default/objects/SPEN_PaymentGestures__c/fields/SPEN_PaymentType__c.field-meta.xml
<CustomField>
    <fullName>SPEN_PaymentType__c</fullName>
    <description>Hold the mode of payment. CRMD-5327</description>
    <label>Payment/Gesture Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>SPEN_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer Service Payment</fullName>
            </value>
            <value>
                <fullName>Simply Thank You Vouchers/Gifts</fullName>
            </value>
            <value>
                <fullName>Hot Food Payment</fullName>
            </value>
            <value>
                <fullName>Just Eat Payment</fullName>
            </value>
            <value>
                <fullName>Hotel Payment</fullName>
            </value>
            <value>
                <fullName>Insurance</fullName>
            </value>
            <value>
                <fullName>Insurance Land Damage</fullName>
            </value>
            <value>
                <fullName>Voucher</fullName>
            </value>
            <value>
                <fullName>Flowers</fullName>
            </value>
            <value>
                <fullName>Cards</fullName>
            </value>
            <value>
                <fullName>Bank Transfer</fullName>
                <isActive>false</isActive>
                <label>Bank Transfer</label>
            </value>
            <value>
                <fullName>Cheque</fullName>
                <isActive>false</isActive>
                <label>Cheque</label>
            </value>
            <value>
                <fullName>Online</fullName>
                <isActive>false</isActive>
                <label>Online</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>