force-app/main/default/objects/SPEN_PaymentGestures__c/fields/SPEN_PPaymentMeth__c.field-meta.xml
<CustomField>
    <fullName>SPEN_PPaymentMeth__c</fullName>
    <label>P.Payment Meth</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>01</fullName>
            </value>
            <value>
                <fullName>02</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>