force-app/main/default/objects/SPEN_PaymentGestures__c/fields/SPEN_SubType__c.field-meta.xml
<CustomField>
    <fullName>SPEN_SubType__c</fullName>
    <description>It holds Subtype for CRMD-1358</description>
    <label>Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0749</fullName>
            </value>
            <value>
                <fullName>0702</fullName>
            </value>
            <value>
                <fullName>0706</fullName>
            </value>
            <value>
                <fullName>0705</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>