force-app/main/default/objects/SPEN_PaymentGestures__c/fields/SPEN_Type__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Type__c</fullName>
    <description>Holds the type of Payment/Gesture CRMD-5327</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Payment</fullName>
            </value>
            <value>
                <fullName>Gesture</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>