force-app/main/default/objects/SPEN_PaymentGestures__c/recordTypes/CNT.recordType-meta.xml
<RecordType>
    <fullName>CNT</fullName>
    <active>true</active>
    <label>CNT</label>
</RecordType>