force-app/main/default/objects/SPEN_PaymentGestures__c/recordTypes/Neutral_Fault.recordType-meta.xml
<RecordType>
    <fullName>Neutral_Fault</fullName>
    <active>true</active>
    <label>Neutral Fault</label>
</RecordType>