force-app/main/default/objects/SPEN_PaymentGestures__c/recordTypes/SPEN_Complaints.recordType-meta.xml
<RecordType>
    <fullName>SPEN_Complaints</fullName>
    <active>true</active>
    <label>Complaints</label>
</RecordType>