force-app/main/default/objects/SPEN_PaymentGestures__c/recordTypes/SPEN_CustomerSatisfaction.recordType-meta.xml
<RecordType>
    <fullName>SPEN_CustomerSatisfaction</fullName>
    <active>true</active>
    <label>Customer Satisfaction</label>
</RecordType>