force-app/main/default/objects/SPEN_PaymentGestures__c/recordTypes/SPEN_GeneralEnquiries.recordType-meta.xml
<RecordType>
    <fullName>SPEN_GeneralEnquiries</fullName>
    <active>true</active>
    <label>General Enquiries Payment/Gesture</label>
</RecordType>