force-app/main/default/objects/SPEN_PaymentGestures__c/recordTypes/SPEN_GS.recordType-meta.xml
<RecordType>
    <fullName>SPEN_GS</fullName>
    <active>true</active>
    <label>GS</label>
</RecordType>