force-app/main/default/objects/SPEN_PaymentGestures__c/recordTypes/SPEN_LCTPaymentGesture.recordType-meta.xml
<RecordType>
    <fullName>SPEN_LCTPaymentGesture</fullName>
    <active>true</active>
    <label>LCT Payment Gesture</label>
</RecordType>