force-app/main/default/objects/SPEN_PaymentGestures__c/validationRules/SPEN_PaymentTypeCheck.validationRule-meta.xml
<ValidationRule>
    <fullName>SPEN_PaymentTypeCheck</fullName>
    <active>false</active>
    <description>If type = &apos;Payment&apos; then Payment type is mandatory</description>
    <errorConditionFormula>IF( (ISPICKVAL(SPEN_Type__c, &apos;Payment&apos;)||ISPICKVAL(SPEN_Type__c, &apos;Gesture&apos;)), ISBLANK(TEXT(SPEN_PaymentType__c)), false)</errorConditionFormula>
    <errorMessage>You need to Fill Payment/Gesture Type</errorMessage>
</ValidationRule>